export const snapshot = {};

snapshot[`convert > one project > 逆・順・双方向・空リンク+中身あり・空headword+複数パス2 hop links 1`] = `
Map {
  "/takker-dist/a" => {
      descriptions: [
        "[A1],[A2],[A3]",
        "https://scrapbox.io/api/pages/takker-dist/A",
      ],
      exists: true,
      image: null,
      isLinkedCorrect: false,
      lines: [
        {
          created: 1672173548,
          id: "dummy",
          text: "A",
          updated: 1672173548,
          userId: "dummy",
        },
        {
          created: 1672173548,
          id: "dummy",
          text: "[A1],[A2],[A3]",
          updated: 1672173548,
          userId: "dummy",
        },
        {
          created: 1672173548,
          id: "dummy",
          text: "https://scrapbox.io/api/pages/takker-dist/A",
          updated: 1672173548,
          userId: "dummy",
        },
      ],
      project: "takker-dist",
      titleLc: "a",
      updated: 1672173548,
    },
  "/takker-dist/a1" => {
      descriptions: [
      ],
      exists: false,
      image: null,
      isLinkedCorrect: false,
      lines: [
        {
          created: 0,
          id: "dummy",
          text: "A1",
          updated: 0,
          userId: "dummy",
        },
      ],
      linked: [
        "b",
        "a",
      ],
      project: "takker-dist",
      titleLc: "a1",
      updated: 0,
    },
  "/takker-dist/b" => {
      descriptions: [
        "[B1], [B2], [B3]",
        "[A1]",
        "https://scrapbox.io/api/pages/takker-dist/B",
      ],
      exists: true,
      image: null,
      isLinkedCorrect: true,
      lines: [
        {
          created: 1672173349,
          id: "63ab57239db1b2001edc43b0",
          text: "B",
          updated: 1672173349,
          userId: "5ef2bdebb60650001e1280f0",
        },
        {
          created: 1672173349,
          id: "63ab57261280f000002d941d",
          text: "[B1], [B2], [B3]",
          updated: 1672173361,
          userId: "5ef2bdebb60650001e1280f0",
        },
        {
          created: 1672173407,
          id: "63ab575f1280f000002d941f",
          text: "[A1]",
          updated: 1672173410,
          userId: "5ef2bdebb60650001e1280f0",
        },
        {
          created: 1672173351,
          id: "63ab57271280f000002d941e",
          text: "https://scrapbox.io/api/pages/takker-dist/B",
          updated: 1673081924,
          userId: "5ef2bdebb60650001e1280f0",
        },
        {
          created: 1673081924,
          id: "63b934441280f00000606f45",
          text: "",
          updated: 1673081924,
          userId: "5ef2bdebb60650001e1280f0",
        },
      ],
      linked: [
        "b1",
      ],
      project: "takker-dist",
      projectLinked: [
      ],
      titleLc: "b",
      updated: 1673081924,
    },
  "/takker-dist/b1" => {
      descriptions: [
        "[B]",
      ],
      exists: true,
      image: null,
      isLinkedCorrect: false,
      lines: [
        {
          created: 1673081852,
          id: "dummy",
          text: "B1",
          updated: 1673081852,
          userId: "dummy",
        },
        {
          created: 1673081852,
          id: "dummy",
          text: "[B]",
          updated: 1673081852,
          userId: "dummy",
        },
      ],
      linked: [
        "b",
        "c",
        "d",
        "e",
      ],
      project: "takker-dist",
      titleLc: "b1",
      updated: 1673081852,
    },
  "/takker-dist/b2" => {
      descriptions: [
      ],
      exists: false,
      image: null,
      isLinkedCorrect: false,
      lines: [
        {
          created: 0,
          id: "dummy",
          text: "B2",
          updated: 0,
          userId: "dummy",
        },
      ],
      linked: [
        "b",
        "e",
      ],
      project: "takker-dist",
      titleLc: "b2",
      updated: 0,
    },
  "/takker-dist/b3" => {
      descriptions: [
      ],
      exists: false,
      image: null,
      isLinkedCorrect: false,
      lines: [
        {
          created: 0,
          id: "dummy",
          text: "B3",
          updated: 0,
          userId: "dummy",
        },
      ],
      linked: [
        "b",
      ],
      project: "takker-dist",
      titleLc: "b3",
      updated: 0,
    },
  "/takker-dist/c" => {
      descriptions: [
        "[C1], [C2], [C3]",
        "[A2], [A3]",
        "[B1]",
      ],
      exists: true,
      image: null,
      isLinkedCorrect: false,
      lines: [
        {
          created: 1673081866,
          id: "dummy",
          text: "C",
          updated: 1673081866,
          userId: "dummy",
        },
        {
          created: 1673081866,
          id: "dummy",
          text: "[C1], [C2], [C3]",
          updated: 1673081866,
          userId: "dummy",
        },
        {
          created: 1673081866,
          id: "dummy",
          text: "[A2], [A3]",
          updated: 1673081866,
          userId: "dummy",
        },
        {
          created: 1673081866,
          id: "dummy",
          text: "[B1]",
          updated: 1673081866,
          userId: "dummy",
        },
      ],
      project: "takker-dist",
      titleLc: "c",
      updated: 1673081866,
    },
  "/takker-dist/d" => {
      descriptions: [
        "[B1]",
      ],
      exists: true,
      image: null,
      isLinkedCorrect: false,
      lines: [
        {
          created: 1673081879,
          id: "dummy",
          text: "D",
          updated: 1673081879,
          userId: "dummy",
        },
        {
          created: 1673081879,
          id: "dummy",
          text: "[B1]",
          updated: 1673081879,
          userId: "dummy",
        },
      ],
      project: "takker-dist",
      titleLc: "d",
      updated: 1673081879,
    },
  "/takker-dist/e" => {
      descriptions: [
        "[B1], [B2]",
      ],
      exists: true,
      image: null,
      isLinkedCorrect: false,
      lines: [
        {
          created: 1673081909,
          id: "dummy",
          text: "E",
          updated: 1673081909,
          userId: "dummy",
        },
        {
          created: 1673081909,
          id: "dummy",
          text: "[B1], [B2]",
          updated: 1673081909,
          userId: "dummy",
        },
      ],
      project: "takker-dist",
      titleLc: "e",
      updated: 1673081909,
    },
}
`;

snapshot[`convert > one project > (逆リンク|順リンク|双方向リンク)+2 hop links 1`] = `
Map {
  "/takker-dist/b" => {
      descriptions: [
        "[B1], [B2], [B3]",
        "[A1]",
        "https://scrapbox.io/api/pages/takker-dist/B",
      ],
      exists: true,
      image: null,
      isLinkedCorrect: false,
      lines: [
        {
          created: 1673081924,
          id: "dummy",
          text: "B",
          updated: 1673081924,
          userId: "dummy",
        },
        {
          created: 1673081924,
          id: "dummy",
          text: "[B1], [B2], [B3]",
          updated: 1673081924,
          userId: "dummy",
        },
        {
          created: 1673081924,
          id: "dummy",
          text: "[A1]",
          updated: 1673081924,
          userId: "dummy",
        },
        {
          created: 1673081924,
          id: "dummy",
          text: "https://scrapbox.io/api/pages/takker-dist/B",
          updated: 1673081924,
          userId: "dummy",
        },
      ],
      linked: [
        "i",
        "b1",
      ],
      project: "takker-dist",
      titleLc: "b",
      updated: 1673081924,
    },
  "/takker-dist/b1" => {
      descriptions: [
        "[B]",
      ],
      exists: true,
      image: null,
      isLinkedCorrect: false,
      lines: [
        {
          created: 1673081852,
          id: "dummy",
          text: "B1",
          updated: 1673081852,
          userId: "dummy",
        },
        {
          created: 1673081852,
          id: "dummy",
          text: "[B]",
          updated: 1673081852,
          userId: "dummy",
        },
      ],
      linked: [
        "i",
        "j",
        "k",
        "b",
        "c",
        "d",
        "e",
      ],
      project: "takker-dist",
      titleLc: "b1",
      updated: 1673081852,
    },
  "/takker-dist/c" => {
      descriptions: [
        "[C1], [C2], [C3]",
        "[A2], [A3]",
        "[B1]",
      ],
      exists: true,
      image: null,
      isLinkedCorrect: false,
      lines: [
        {
          created: 1673081866,
          id: "dummy",
          text: "C",
          updated: 1673081866,
          userId: "dummy",
        },
        {
          created: 1673081866,
          id: "dummy",
          text: "[C1], [C2], [C3]",
          updated: 1673081866,
          userId: "dummy",
        },
        {
          created: 1673081866,
          id: "dummy",
          text: "[A2], [A3]",
          updated: 1673081866,
          userId: "dummy",
        },
        {
          created: 1673081866,
          id: "dummy",
          text: "[B1]",
          updated: 1673081866,
          userId: "dummy",
        },
      ],
      project: "takker-dist",
      titleLc: "c",
      updated: 1673081866,
    },
  "/takker-dist/d" => {
      descriptions: [
        "[B1]",
      ],
      exists: true,
      image: null,
      isLinkedCorrect: false,
      lines: [
        {
          created: 1673081879,
          id: "dummy",
          text: "D",
          updated: 1673081879,
          userId: "dummy",
        },
        {
          created: 1673081879,
          id: "dummy",
          text: "[B1]",
          updated: 1673081879,
          userId: "dummy",
        },
      ],
      project: "takker-dist",
      titleLc: "d",
      updated: 1673081879,
    },
  "/takker-dist/e" => {
      descriptions: [
        "[B1], [B2]",
      ],
      exists: true,
      image: null,
      isLinkedCorrect: false,
      lines: [
        {
          created: 1673081909,
          id: "dummy",
          text: "E",
          updated: 1673081909,
          userId: "dummy",
        },
        {
          created: 1673081909,
          id: "dummy",
          text: "[B1], [B2]",
          updated: 1673081909,
          userId: "dummy",
        },
      ],
      project: "takker-dist",
      titleLc: "e",
      updated: 1673081909,
    },
  "/takker-dist/i" => {
      descriptions: [
        "[B] [B1] [K]",
        "https://scrapbox.io/api/pages/takker-dist/I",
      ],
      exists: true,
      image: null,
      isLinkedCorrect: true,
      lines: [
        {
          created: 1673572279,
          id: "63c0afb552e241001d99bfac",
          text: "I",
          updated: 1673572279,
          userId: "5ef2bdebb60650001e1280f0",
        },
        {
          created: 1673572279,
          id: "63c0afb71280f00000e9bae0",
          text: "[B] [B1] [K]",
          updated: 1673572397,
          userId: "5ef2bdebb60650001e1280f0",
        },
        {
          created: 1673572279,
          id: "63c0afb81280f00000e9bae1",
          text: "https://scrapbox.io/api/pages/takker-dist/I",
          updated: 1673572411,
          userId: "5ef2bdebb60650001e1280f0",
        },
        {
          created: 1673572411,
          id: "63c0b03c1280f00000e9bae6",
          text: "",
          updated: 1673572411,
          userId: "5ef2bdebb60650001e1280f0",
        },
      ],
      linked: [
        "j",
        "k",
      ],
      project: "takker-dist",
      projectLinked: [
      ],
      titleLc: "i",
      updated: 1673572411,
    },
  "/takker-dist/j" => {
      descriptions: [
        "[I] [B1]",
      ],
      exists: true,
      image: null,
      isLinkedCorrect: false,
      lines: [
        {
          created: 1673572354,
          id: "dummy",
          text: "J",
          updated: 1673572354,
          userId: "dummy",
        },
        {
          created: 1673572354,
          id: "dummy",
          text: "[I] [B1]",
          updated: 1673572354,
          userId: "dummy",
        },
      ],
      project: "takker-dist",
      titleLc: "j",
      updated: 1673572354,
    },
  "/takker-dist/k" => {
      descriptions: [
        "[I] [B1]",
      ],
      exists: true,
      image: null,
      isLinkedCorrect: false,
      lines: [
        {
          created: 1673572392,
          id: "dummy",
          text: "K",
          updated: 1673572392,
          userId: "dummy",
        },
        {
          created: 1673572392,
          id: "dummy",
          text: "[I] [B1]",
          updated: 1673572392,
          userId: "dummy",
        },
      ],
      linked: [
        "i",
      ],
      project: "takker-dist",
      titleLc: "k",
      updated: 1673572392,
    },
}
`;

snapshot[`convert > two projects > 逆・順・双方向External links 1`] = `
Map {
  "/takker-dist/f" => {
      descriptions: [
        "[/takker-dist2/B]",
        "[/takker-dist2/C]",
        "[/takker-dist2/G]",
        "https://scrapbox.io/api/pages/takker-dist/F",
      ],
      exists: true,
      image: null,
      isLinkedCorrect: true,
      lines: [
        {
          created: 1673336497,
          id: "63bd16afdb71fb001d058f0e",
          text: "F",
          updated: 1673336497,
          userId: "5ef2bdebb60650001e1280f0",
        },
        {
          created: 1673336497,
          id: "63bd16b11280f00000b00965",
          text: "[/takker-dist2/B]",
          updated: 1673336501,
          userId: "5ef2bdebb60650001e1280f0",
        },
        {
          created: 1673336501,
          id: "63bd16b51280f00000b00966",
          text: "[/takker-dist2/C]",
          updated: 1673336571,
          userId: "5ef2bdebb60650001e1280f0",
        },
        {
          created: 1673336580,
          id: "63bd17041280f00000b0096b",
          text: "[/takker-dist2/G]",
          updated: 1673336595,
          userId: "5ef2bdebb60650001e1280f0",
        },
        {
          created: 1673336594,
          id: "63bd17111280f00000b0096c",
          text: "https://scrapbox.io/api/pages/takker-dist/F",
          updated: 1673336640,
          userId: "5ef2bdebb60650001e1280f0",
        },
        {
          created: 1673336640,
          id: "63bd17401280f00000b0096e",
          text: "",
          updated: 1673336640,
          userId: "5ef2bdebb60650001e1280f0",
        },
      ],
      linked: [
      ],
      project: "takker-dist",
      projectLinked: [
        "/takker-dist2/a",
      ],
      titleLc: "f",
      updated: 1673336640,
    },
  "/takker-dist2/a" => {
      descriptions: [
        "[/takker-dist/F]",
      ],
      exists: true,
      image: null,
      isLinkedCorrect: false,
      lines: [
        {
          created: 1673336561,
          id: "dummy",
          text: "A",
          updated: 1673336561,
          userId: "dummy",
        },
        {
          created: 1673336561,
          id: "dummy",
          text: "[/takker-dist/F]",
          updated: 1673336561,
          userId: "dummy",
        },
      ],
      project: "takker-dist2",
      titleLc: "a",
      updated: 1673336561,
    },
  "/takker-dist2/b" => {
      descriptions: [
        "[B1] [B2]",
      ],
      exists: true,
      image: null,
      isLinkedCorrect: false,
      lines: [
        {
          created: 1673336514,
          id: "dummy",
          text: "B",
          updated: 1673336514,
          userId: "dummy",
        },
        {
          created: 1673336514,
          id: "dummy",
          text: "[B1] [B2]",
          updated: 1673336514,
          userId: "dummy",
        },
      ],
      project: "takker-dist2",
      titleLc: "b",
      updated: 1673336514,
    },
  "/takker-dist2/c" => {
      descriptions: [
        "[/takker-dist/F]",
      ],
      exists: true,
      image: null,
      isLinkedCorrect: false,
      lines: [
        {
          created: 1673336584,
          id: "dummy",
          text: "C",
          updated: 1673336584,
          userId: "dummy",
        },
        {
          created: 1673336584,
          id: "dummy",
          text: "[/takker-dist/F]",
          updated: 1673336584,
          userId: "dummy",
        },
      ],
      project: "takker-dist2",
      titleLc: "c",
      updated: 1673336584,
    },
}
`;
